<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Sunshine</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_location_default">500081</string>
    <string name="pref_location_key">location</string>
    <string name="pref_location">Location</string>
    <string name="pref_unit_default">metric</string>
    <string name="pref_unit_imperial">imperial</string>
    <string name="pref_unit_key">unit</string>
    <string name="pref_unit">Temperature Units</string>
    <string name="pref_unit_values" />
    <string name="action_map">Map</string>
    <string name="action_share">Share</string>
    <string-array name="pref_unit_entries">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    <string-array name="pref_unit_values">
        <item>metric</item>
        <item>imperial</item>
    </string-array>
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>
    <string name="pref_unit_metric">metric</string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
<string name="format_wind_mph">
    Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
</string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
<string name="format_wind_kmh">
    Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
</string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
    <string name="sync_account_type">sunshine.subbu.com</string>
    <string name="content_authority">com.subbu.sunshine</string>
    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification
    </string>
    <string name="notification">Notifications</string>
    <string name="notification_key">notification</string>
    <string name="notification_enabled">Enable</string>
    <string name="notification_not_enabled">Not enabled</string>
    <string name="no_weather_info">No weather information available</string>
    <string name="no_network">No weather information available. The network is not available to fetch weather data</string>
    <string name="location_status">location_status</string>
    <string name="empty_forecast_list_server_down">No weather information available. The server is not returning data</string>
    <string name="empty_forecast_list_server_error">No weather information available. The server is not returning valid data. Please check for an updated version of Sunshine</string>
    <string name="empty_forecast_list_invalid_location">No weather information available. The location in settings is not recognized by the weather server.</string>
    <!-- Strings used when displaying the state of the Location in settings -->
    <string name="pref_location_error_description">Invalid Location (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_unknown_description">Validating Location... (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <string name="a11y_forecast">Forecast: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_forecast_icon">Forecast icon: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_high_temp">High: <xliff:g id="high">%1$s</xliff:g></string>
    <string name="a11y_low_temp">Low: <xliff:g id="low">%1$s</xliff:g></string>
    <!-- Format for retrieving art from an external source [CHAR LIMIT=NONE] -->
    <!--<string name="format_art_url" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_<xliff:g id="description">%s</xliff:g>.png</string>-->
    <!-- Label for the art pack preference [CHAR LIMIT=30] -->
    <string name="pref_art_pack_label">Icon Pack</string>

    <!-- Label for Sunshine option in art pack preference [CHAR LIMIT=25] -->
    <string name="pref_art_pack_label_sunshine">Sunshine</string>

    <!-- Label for cute dogs option in art pack preference [CHAR LIMIT=25] -->
    <string name="pref_art_pack_label_cute_dogs">Cute dogs</string>

    <!-- Key name for art pack unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_art_pack_key" translatable="false">art_pack</string>

    <!-- Value in SharedPreferences for Sunshine art pack option [CHAR LIMIT=NONE] -->
    <string name="pref_art_pack_sunshine" translatable="false">https://raw.githubusercontent.com/udacity/sunshine_icons/master/Archive/Mono/art_%s.png</string>

    <!-- Value in SharedPreferences for cute dogs art pack  option [CHAR LIMIT=NONE] -->
    <string name="pref_art_pack_cute_dogs" translatable="false">https://raw.githubusercontent.com/udacity/sunshine_icons/master/Archive/Colored/art_%s.png</string>

    <!-- Names of the art packs available -->
    <string-array name="pref_art_pack_options">
        <item>@string/pref_art_pack_label_sunshine</item>
        <item>@string/pref_art_pack_label_cute_dogs</item>
    </string-array>

    <!-- Format for retrieving art from an external source [CHAR LIMIT=NONE] -->
    <string-array name="pref_art_pack_values">
        <item>@string/pref_art_pack_sunshine</item>
        <item>@string/pref_art_pack_cute_dogs</item>
    </string-array>
    <string name="gcm_weather_alert">Heads up: %1$s in %2$s!</string>
</resources>
